[package]
name = "seaorm_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
sea-orm = { version = "^0.4", features = [ "sqlx-sqlite" , "runtime-tokio-native-tls", "macros" ], default-features = false }
tokio = {version = "1.47.1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
axum-extra = "0.10.3"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = "0.3.20"
http-body-util = "0.1.3"
tracing = "0.1"
dotenv = "0.15.0"
anyhow = "1.0.100"
